fix: horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
 
 }
 
+body{
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
